refactor: git files collector
